# Parl-Check

./: .gitignore  README.md  api_caller.py  chatbot.py  data_handler.py  document_handler.py  main.py  notebook.ipynb  pyproject.toml  tested_questions.txt
documents/: anforande-202223.csv  anforande-202324.csv  anforande-202425.csv  votering-202425.csv.zip:Zone.Identifier
documents/votering-202223.csv/: votering-202223.csv:Zone.Identifier
documents/votering-202324.csv/: votering-202324.csv:Zone.Identifier
documents/votering-202425.csv/: votering-202425.csv:Zone.Identifier
documents/votering-202526.csv/: votering-202526.csv:Zone.Identifier
pages/: statistics.py
